tests/function/never_closing_paren.rz
fn fib(a: int, b: bool // error: parenthesis is never closed